--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -40,8 +40,8 @@
      <div class="container">
       <div class="row justify-content-between">
        <div class="col-md-8 order-md-2">
-        <div class="row shop-header align-items-center">
-         <div class="col-lg-6">
+        <div class="row  align-items-center">
+         <!-- <div class="col-lg-6">
           <div class="grid-icons">
            <button class="three-column active">
            </button>
@@ -52,8 +52,8 @@
            <button class="list-view">
            </button>
           </div>
-         </div>
-         <div class="col-lg-6 text-lg-right">
+         </div> -->
+         <!-- <div class="col-lg-6 text-lg-right">
           <div class="single-select-block d-inline-block">
            <span class="select-title">
             Show:
@@ -72,8 +72,8 @@
              40
             </option>
            </select>
-          </div>
-          <div class="single-select-block d-inline-block">
+          </div> -->
+          <!-- <div class="single-select-block d-inline-block">
            <span class="select-title">
             Sort By:
            </span>
@@ -91,8 +91,8 @@
              Color
             </option>
            </select>
-          </div>
-         </div>
+          </div> -->
+         <!-- </div> -->
         </div>
         <div class="row">
             {% for p in prod %}
