--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -36,7 +36,7 @@
         <h5 class="cat-name">
          {{c.category_name}}
         </h5>
-        <a class="cat-link" href="{% url 'category' c.id %}">
+        <a class="cat-link" href="{% url 'category' c.slug %}">
          View All
          <i class="ti-arrow-right">
          </i>
