--- a/home/templates/uploadprescription.html
+++ b/home/templates/uploadprescription.html
@@ -47,7 +47,7 @@
          </form>
         </div>
        </div>
-       <div class="col-lg-7">
+       <!-- <div class="col-lg-7">
         <div class="bg-light py-4 px-md-5 px-3">
          <h4 class="mb-3">
           Valid Prescription Guide
@@ -79,7 +79,17 @@
            <img alt="" class="img-fluid" src="{% static 'assets/img/extra/prescription.svg' %}"/>
           </div>
          </div>
+        </div> -->
+        <!-- Prescripiton -->
+        <div class="col-lg-5 mb-5 mb-md-0">
+          <!-- <div class="bg-light"> -->
+            <!-- <h4 class="mb-3">
+             Uploaded File
+            </h4> -->
+          <img alt="" class="img-fluid" src="/media/{{presimg.image}}" style="width:50%">
+        <!-- </div> -->
         </div>
+        
        </div>
       </div>
      </div>
