--- a/product/templates/checkout.html
+++ b/product/templates/checkout.html
@@ -368,6 +368,7 @@ function getGooglePaymentDataRequest() {
     // @todo a merchant ID is available for a production environment after approval by Google
     // See {@link https://developers.google.com/pay/api/web/guides/test-and-deploy/integration-checklist|Integration checklist}
     // merchantId: '12345678901234567890',
+    merchantId: 'BCR2DN4TQTPLT6ZA',
     merchantName: 'Example Merchant'
   };
   return paymentDataRequest;
@@ -436,7 +437,7 @@ function getGoogleTransactionInfo() {
     currencyCode: 'USD',
     totalPriceStatus: 'FINAL',
     // set to cart total
-    totalPrice: '1.00'
+    totalPrice: '{{totalamount}}'
   };
 }
 
