--- a/product/templates/productsingle.html
+++ b/product/templates/productsingle.html
@@ -115,12 +115,12 @@
            </span>
           </p>
           <div class="single-info">
-           <!-- <span class="d-block text-muted mb-2">
+           <span class="d-block text-muted mb-2">
             <strong>
-             SKU :
+             Code :
             </strong>
-            MB5415
-           </span> -->
+            {{prod.code}}
+           </span>
            <span class="d-block text-muted mb-2">
             <strong>
              Category :
