--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8"/>
   <!-- Sets the title of the page.  Shown in the tab of your browser -->
   <title>
-   Hospitania
+   Dispack
   </title>
   <!-- Required for Bootstrap's responsive media queries to function -->
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
@@ -26,7 +26,7 @@
   </link>
  </head>
  <body>
-  <div class="alert alert-warning alert-dismissible fade show announcement-header" role="alert">
+  <!-- <div class="alert alert-warning alert-dismissible fade show announcement-header" role="alert">
    <div class="container-fluid">
     <div class="pro-description">
      <div class="pro-info">
@@ -48,15 +48,16 @@
      </button>
     </div>
    </div>
-  </div>
+  </div> -->
   <div class="header">
    <div class="container-fluid theme-container">
     <div class="top-header">
      <div class="row align-items-center">
       <div class="col-auto">
-       <a href="{% url 'index' %}">
+       <a href="{% url 'index' %}"  style="text-decoration: none;">
         <!-- <img alt="logo" class="header-logo" src="{%  static 'assets/img/logo.png' %}"/> -->
-        <img alt="logo" class="header-logo" src="/media/{{aboutdata.0.logo}}"/>
+        <img alt="logo" class="header-logo" src="/media/{{aboutdata.0.logo}}" style="width:150px;height: 100px;"/>
+        <!-- <h3><b>DISPACK</b></h3> -->
        </a>
       </div>
       <div class="col">
@@ -64,7 +65,7 @@
         
         <form action="{% url 'search' %}" method="GET" >
        
-         <input class="form-control custom-search" placeholder="Search for Medicines and Health Products" type="search" value="{{request.GET.search}}" name="search"/>
+         <input class="form-control custom-search" placeholder="Search for  Products" type="search" value="{{request.GET.search}}" name="search"/>
         </form>
         <!-- <div class="search-content">
          <div class="search-product d-none">
@@ -433,18 +434,19 @@
       <ul class="header-links-container"  style="line-height: 7.5px;">
        
         {% for data in ""|getcategory %}      
-        <li class="header-links-item" >
+        <li class="header-links-item">
         <div class="header-childrenItem-parent">
          <a href="#">
-          <span class="header-childrenItem-link-text">
+          <span class="header-childrenItem-link-text"  style="font-size: 15px;">
             {{data.category_name}}
             
           </span>
          </a>
        
-        
-         <i class="fa fa-angle-down drop-icon">
-         </i>
+         <i class="fa fa-caret-down">
+        </i> &nbsp;
+         <!-- <i class="fa fa-angle-down drop-icon">
+         </i> -->
         
         </div>
         <div class="header-childrenItem-child-category-links">
@@ -459,8 +461,8 @@
              
              {{mdata.subcategory_name | capfirst}} </span>
              </a>
-       
-         </li>
+             &nbsp;
+         </li> 
              <ul class="header-childrenItem-child-list" style="padding-top:5px;">
             
               {% for data in mdata.subcategory.all %}
