--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -161,7 +161,7 @@
   <!-- //product slider -->
   <div class="pt-5">
    <div class="container-fluid theme-container">
-    <div class="row mb-4">
+    <!-- <div class="row mb-4">
      <div class="col">
       <h5 class="product-heading">
        Flash deals
@@ -172,7 +172,7 @@
        See All
       </a>
      </div>
-    </div>
+    </div> -->
     <div class="slider arrow-light slider-gap" data-autoplay="true" data-dots="false" data-nav="true" data-slides-to-show="6">
      {% for d in deals %}
       <div class="product">
@@ -481,7 +481,7 @@
    </div>
   </div>
   <!-- //Offer-->
-  <div class="pt-5">
+  <!-- <div class="pt-5">
    <div class="offers-list bg-light py-5 offers-grid-2">
     <div class="container">
      <ul>
@@ -521,7 +521,7 @@
      </ul>
     </div>
    </div>
-  </div>
+  </div> -->
   <!-- //product Grid -->
   <div class="pt-5">
    <div class="container-fluid theme-container">
