--- a/product/templates/checkout.html
+++ b/product/templates/checkout.html
@@ -75,7 +75,7 @@
         </div>
         <!-- <button class="primary" type="submit" name="submit">Submit</button> -->
        
-        <div onclick="submit_form()">Click Me To Submit</div>
+        <!-- <div onclick="submit_form()">Click Me To Submit</div> -->
          <!-- <div id="paypal-button-container"></div> -->
        
          <!-- <div class="accordion-item"> 
@@ -135,7 +135,7 @@
 </div> -->
       <div class="row">
         <div class ="col">
-          <div id="paypal-button-container"  style="width: 200px">
+          <div id="paypal-button-container">
           
           </div>
         </div>
