--- a/product/templates/products.html
+++ b/product/templates/products.html
@@ -130,9 +130,9 @@
                 {{p.mrp}}
                </del>
               </small>
-              <div class="off-price">
+              <!-- <div class="off-price">
               {{p.offer_percentage}}% off
-              </div>
+              </div> -->
              </div>
              <div class="current-price" style="margin-right:40px;">
              {{p.offer_price}}
